--- a/CV/cv.html
+++ b/CV/cv.html
@@ -252,6 +252,12 @@
       <h2>Invited Talks</h2>
       <div class="talks-container">
         <!-- New invited talks (after Jan 2025) -->
+   <div class="talk-item">
+      <strong>Moderate deviations in First-passage percolation for bounded weights</strong><br/>
+          <span class="date-range">September 8–12, 2025</span><br/>
+          <span class="institution">University POLITEHNICA Bucharest</span>, Bucharest, Romania
+        </div>
+
         <div class="talk-item">
           <strong>Maximum of the 2D directed polymer in the subcritical regime and Inhomogeneous Branching Brownian Motion</strong><br/>
           <span class="date-range">June 16–20, 2025</span><br/>
@@ -263,12 +269,7 @@
           <span class="institution">International Symposium “Stochastic Processes and Complex Systems (SPCS)”, Tohoku University (Sendai, Japan)</span><br/>
           <a class="talk-link" href="https://sites.google.com/view/workshop-spcs" target="_blank" rel="noopener noreferrer">Workshop page</a>
         </div>
-        <div class="talk-item">
-          <strong>Invited talk (25 minutes)</strong><br/>
-          <span class="date-range">September 8–12, 2025</span><br/>
-          <span class="institution">University POLITEHNICA Bucharest</span>, Bucharest, Romania
-        </div>
-
+     
         <!-- Existing list -->
         <div class="talk-item">"Maximum of partition functions for 2D directed polymers in subcritical regime", Probability Workshop in Korea 2025, <u>Seoul</u>, Korea, 2025, 1月.</div>
         <div class="talk-item">"Sharp thresholds and universality in Ising perceptron models", Kansai Probability Seminar, Kyoto, 2024, 11月.</div>
