--- a/Publication/index.html
+++ b/Publication/index.html
@@ -6,7 +6,6 @@
     <title>Shuta Nakajima's Papers</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="image.png" type="image/x-icon">
-
 </head>
 <body>
     <header>
@@ -17,45 +16,63 @@
             <h2>Welcome</h2>
             <p>Welcome to the collection of research papers by Shuta Nakajima. Here you can find various publications and research works.</p>
         </section>
+
         <section id="papers">
             <h2>Preprints and Submitted Papers</h2>
             <ul>
-<li><a href="https://arxiv.org/abs/2503.17236">The maximum of the two dimensional Gaussian directed polymer in the subcritical regime</a> (with <a href="https://www.ceremade.dauphine.fr/~cosco/">Cosco Clément</a>, <a href="https://www.wisdom.weizmann.ac.il/~zeitouni/">Ofer Zeitouni</a>)</li>
-<li><a href="https://arxiv.org/abs/2503.17232">High moments of 2d directed polymers up to quasi-criticality</a> (with <a href="https://www.ceremade.dauphine.fr/~cosco/">Cosco Clément</a>)</li>
-                <li><a href="https://arxiv.org/abs/2502.12797"> Moderate deviations in first-passage percolation for bounded weights </a> (with <a href="https://wk-lam.github.io/">Wai-Kit Lam</a>)</li>
-                <li><a href="https://arxiv.org/abs/2312.02745">Upper tail large deviations in 1D Frog model</a> (with <a href="https://sites.google.com/site/vanhaocan/home">Van Hao Can</a> and <a href="https://sites.google.com/view/kubota-naoki08/home">Naoki Kubota</a>)</li>
-                          <li><a href="https://arxiv.org/abs/2211.02605">On upper tail large deviation rate functions for chemical distance in super-critical percolation</a> (with <a href="https://n.ethz.ch/~bdembin/home.html">Barbara Dembin</a>)</li>
-                 <li><a href="https://arxiv.org/abs/1807.05900">Ergodicity of the number of infinite geodesics originating from zero</a></li>
+                <li><a href="https://arxiv.org/abs/2503.17236">The maximum of the two dimensional Gaussian directed polymer in the subcritical regime</a> (with <a href="https://www.ceremade.dauphine.fr/~cosco/">Clément Cosco</a>, <a href="https://www.wisdom.weizmann.ac.il/~zeitouni/">Ofer Zeitouni</a>)</li>
+                <li><a href="https://arxiv.org/abs/2503.17232">High moments of 2d directed polymers up to quasi-criticality</a> (with <a href="https://www.ceremade.dauphine.fr/~cosco/">Clément Cosco</a>)</li>
+                <li><a href="https://arxiv.org/abs/2502.12797">Moderate deviations in first-passage percolation for bounded weights</a> (with <a href="https://wk-lam.github.io/">Wai‑Kit Lam</a>)</li>
+                <li><a href="https://arxiv.org/abs/2312.02745">Upper tail large deviations in 1D Frog model</a> (with <a href="https://sites.google.com/site/vanhaocan/home">Van Hao Can</a>, <a href="https://sites.google.com/view/kubota-naoki08/home">Naoki Kubota</a>)</li>
+                <li><a href="https://arxiv.org/abs/2211.02605">On upper tail large deviation rate functions for chemical distance in super‑critical percolation</a> (with <a href="https://n.ethz.ch/~bdembin/home.html">Barbara Dembin</a>)</li>
+                <li><a href="https://arxiv.org/abs/1807.05900">Ergodicity of the number of infinite geodesics originating from zero</a></li>
             </ul>
 
             <h2>Published or Accepted Papers</h2>
-  <li> <a href="https://arxiv.org/abs/2410.06801">Equivalence of fluctuations between SHE and KPZ equation in weak disorder regime</a> (with <a href="https://www.stefanjunkprob.de/">Stefan Junk</a>)　Probability and  Mathematical Physics</li>
- <li><a href="https://link.springer.com/article/10.1007/s11040-024-09497-6">Lipschitz-type estimate for the frog model with Bernoulli initial configuration</a> (with <a href="https://sites.google.com/site/vanhaocan/home">Van Hao Can</a>, <a href="https://sites.google.com/view/kubota-naoki08/home">Naoki Kubota</a>) Mathematical Physics, Analysis and Geometry, 28(1), 2025</li>
- <li><a href="https://arxiv.org/abs/2112.03661">Asymptotics of the <em>p</em>-capacity in the critical regime to appear in J. Convex Anal</a> (with <a href="https://www.ceremade.dauphine.fr/~cosco/">Cosco Clément</a>, <a href="https://www.iam.uni-bonn.de/users/schweiger/home/">Florian Schweiger</a>)</li>
-   <li><a href="https://www.sciencedirect.com/science/article/pii/S1063520324001131">Injectivity of ReLU networks: perspectives from statistical physics</a> (with <a href="https://anmaillard.github.io/">Antoine Maillard</a>, <a href="https://people.math.ethz.ch/~abandeira/">Afonso S. Bandeira</a>, <a href="https://probability.dmi.unibas.ch/belius/">David Belius</a>, <a href="https://dmi.unibas.ch/de/personen/ivan-dokmanic/">Ivan Dokmanic</a>) Applied and Computational Harmonic Analysis 
-(76) </li>
-   
-                <li><a href="https://link.springer.com/article/10.1007/s11040-024-09497-6"> Lipschitz-type estimate for the frog model with Bernoulli initial configuration</a> (joint work with Van Hao Can and Naoki Kubota),</li>
-                <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S030441492400108X">Lipschitz continuity of time constants in generalized FPP</a> (with <a href="https://sites.google.com/site/vanhaocan/home">Van Hao Can</a> and <a href="http://math.ac.vn/vi/component/staff/?task=getProfile&staffID=145">Nguyễn Văn Quyết</a>) Stochastic Processes and their Applications</li>
-                <li><a href="https://epubs.siam.org/doi/abs/10.1137/1.9781611977554.ch28">Sharp threshold sequence and universality for Ising perception models</a> (with <a href="https://math.mit.edu/~nsun/">Nike Sun</a>) Proceedings of the 2023 Annual ACM-SIAM Symposium on Discrete Algorithms (SODA)</li>
-                <li><a href="https://projecteuclid.org/journals/electronic-journal-of-probability/volume-28/issue-none/Fluctuations-of-two-dimensional-stochastic-heat-equation-and-KPZ-equation/10.1214/22-EJP885.full">Fluctuations of two-dimensional stochastic heat equation and KPZ equation in subcritical regime for general initial conditions</a> (with <a href="https://www.math.nagoya-u.ac.jp/~nakamako/">Makoto Nakashima</a>) Electron. J. Probab. 28: 1-38 (2023)</li>
-                <li><a href="https://par.nsf.gov/servlets/purl/10344272">Gardner formula for Ising perceptron models at small densities</a> (with <a href="https://www.math.uzh.ch/index.php?id=people&id=people&key1=106&L=1">Erwin Bolthausen</a>, <a href="https://math.mit.edu/~nsun/">Nike Sun</a>, <a href="https://www.bing.com/search?q=changji+wu+probability&qs=n&form=QBRE&sp=-1&pq=changji+wu&sc=1-10&sk=&cvid=752C58F3874B4B6DBE63430E6F53223A">Changji Xu</a>) Proceedings of Machine Learning Research vol 178:1–125, 2022</li>
-                <li><a href="https://projecteuclid.org/journals/annals-of-applied-probability/volume-33/issue-3/A-variational-formula-for-large-deviations-in-first-passage-percolation/10.1214/22-AAP1861.short">A variational formula for large deviations in First-passage percolation under tail estimates</a> (with <a href="https://www.ceremade.dauphine.fr/~cosco/">Clément Cosco</a>) Ann. Appl. Probab. 33(3): 2103-2135</li>
-                <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S0304414922001247">Law of large numbers and fluctuations in the sub-critical and $L^2$ regions for SHE and KPZ equation in dimension $d \geq 3$</a> (with <a href="https://www.ceremade.dauphine.fr/~cosco/">Clément Cosco</a> and Makoto Nakashima) Stochastic Processes and their Applications Volume 151, September 2022, Pages 127-173</li>
-                <li><a href="https://projecteuclid.org/journals/electronic-journal-of-probability/volume-27/issue-none/Maximal-edge-traversal-time-in-First-passage-percolation/10.1214/22-EJP746.full">Maximal edge-traversal time in First Passage Percolation</a> Electron. J. Probab. 27: 1-32 (2022)</li>
-                <li><a href="https://link.springer.com/article/10.1007/s10955-021-02855-6">Triviality of the geometry of mixed p-spin spherical Hamiltonians with external field</a> (with <a href="https://probability.dmi.unibas.ch/belius/">David Belius</a>, <a href="https://probability.dmi.unibas.ch/cerny/">Jiří Černý</a>, <a href="https://www.uni-frankfurt.de/42358766">&nbsp;Marius Schmidt</a>) Journal of Statistical Physics. volume 186, Article number: 12 (2022)</li>
-                <li><a href="https://projecteuclid.org/journals/annales-de-linstitut-henri-poincare-probabilites-et-statistiques/volume-57/issue-2/Gaussian-fluctuations-for-the-directed-polymer-partition-function-in-dimension/10.1214/20-AIHP1100.short">Gaussian fluctuations for the directed polymer partition function for d≥3 and in the whole L2-region</a> (with <a href="https://www.ceremade.dauphine.fr/~cosco/">Cosco Clément</a>) Ann. Inst. H. Poincaré Probab. Statist. 57(2): 872-889 (May 2021)</li>
-                <li><a href="https://projecteuclid.org/Proceedings/advanced-studies-in-pure-mathematics/Stochastic-Analysis-Random-Fields-and-Integrable-Probability--Fukuoka-2019/Chapter/Divergence-of-non-random-fluctuation-for-Euclidean-first-passage-percolation/10.2969/aspm/08710363">Divergence of non-random fluctuation for Euclidean first-passage percolation</a> Proceeding of "The 12th Mathematical Society of Japan, Seasonal Institute (MSJ-SI) Stochastic Analysis, Random Fields and Integrable Probability.</li>
-                <li><a href="https://projecteuclid.org/journals/electronic-communications-in-probability/volume-24/issue-none/Divergence-of-non-random-fluctuation-in-First-Passage-Percolation/10.1214/19-ECP267.full">Divergence of non-random fluctuation in First Passage Percolation</a> Electronic Communications in Probability, 2019, Vol. 24, paper no. 65, 1-13.</li>
-                <li><a href="https://projecteuclid.org/journals/annales-de-linstitut-henri-poincare-probabilites-et-statistiques/volume-56/issue-2/Divergence-of-shape-fluctuation-for-general-distributions-in-first-passage/10.1214/19-AIHP982.short">Divergence of shape fluctuation for general distributions in first passage percolation</a> Annales de l’Institut Henri Poincaré - Probabilités et Statistiques Volume 56, Number 2 (2020), 782-791.</li>
-                <li><a href="https://projecteuclid.org/journals/electronic-journal-of-probability/volume-24/issue-none/First-passage-time-of-the-frog-model-has-a-sublinear/10.1214/19-EJP334.full">First passage time of the frog model has a sublinear variance</a> (with <a href="https://sites.google.com/site/vanhaocan/home">Van Hao Can</a>) Electronic Journal of Probability, Online first, 2019.</li>
-                <li><a href="https://link.springer.com/article/10.1007/s10955-018-2179-6">On properties of optimal paths in First-Passage Percolation</a> Journal of Statistical Physics, 174, 259-275, 2019</li>
-                <li><a href="https://alea.impa.br/articles/v15/15-01.pdf">Concentration results for directed polymer with unbounded jumps</a> ALEA, Latin American Journal of Probability and Mathematical Statistics, 15, 1–20 2018</li>
-                <li><a href="https://link.springer.com/article/10.1007/s10955-015-1347-1">Limiting results for the free energy of directed polymers in random environment with unbounded jumps</a> (with <a href="https://www.lpsm.paris/pageperso/comets/">Francis Comets</a>, <a href="http://www.math.tsukuba.ac.jp/~ryoki/">Ryoki Fukushima</a>, <a href="https://www.math.nagoya-u.ac.jp/~noby/">Nobuo Yoshida</a>) Journal of Statistical Physics, 161, 577-597, 2015</li>
+            <ul>
+                <li><a href="https://msp.org/pmp/2025/6-3/p04.xhtml">Equivalence of fluctuations between SHE and KPZ equation in weak disorder regime</a> (with <a href="https://www.stefanjunkprob.de/">Stefan Junk</a>), <em>Probability and Mathematical Physics</em>, 6(3): 819–856, 2025</li>
+
+                <li><a href="https://link.springer.com/article/10.1007/s11040-024-09497-6">Lipschitz‑type estimate for the frog model with Bernoulli initial configuration</a> (with <a href="https://sites.google.com/site/vanhaocan/home">Van Hao Can</a>, <a href="https://sites.google.com/view/kubota-naoki08/home">Naoki Kubota</a>), <em>Mathematical Physics, Analysis and Geometry</em>, 28(1), 2025</li>
+
+                <li><a href="https://arxiv.org/abs/2112.03661">Asymptotics of the <em>p</em>‑capacity in the critical regime</a> (with <a href="https://www.ceremade.dauphine.fr/~cosco/">Clément Cosco</a>, <a href="https://www.unige.ch/~schweige/">Florian Schweiger</a>), to appear in <em>Journal of Convex Analysis</em></li>
+
+                <li><a href="https://doi.org/10.1016/j.acha.2024.101736">Injectivity of ReLU networks: perspectives from statistical physics</a> (with <a href="https://anmaillard.github.io/">Antoine Maillard</a>, <a href="https://people.math.ethz.ch/~abandeira/">Afonso S. Bandeira</a>, <a href="https://probability.dmi.unibas.ch/belius/">David Belius</a>, <a href="https://dmi.unibas.ch/de/personen/ivan-dokmanic/">Ivan Dokmanic</a>), <em>Applied and Computational Harmonic Analysis</em>, 76: 101736, 2025</li>
+
+                <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S030441492400108X">Lipschitz continuity of time constants in generalized FPP</a> (with <a href="https://sites.google.com/site/vanhaocan/home">Van Hao Can</a>, <a href="http://math.ac.vn/vi/component/staff/?task=getProfile&staffID=145">Nguyễn Văn Quyết</a>), <em>Stochastic Processes and their Applications</em>, 175: 104402, 2024</li>
+
+                <li><a href="https://epubs.siam.org/doi/10.1137/1.9781611977554.ch28">Sharp threshold sequence and universality for Ising perceptron models</a> (with <a href="https://math.mit.edu/~nsun/">Nike Sun</a>), in <em>Proceedings of the 2023 Annual ACM–SIAM Symposium on Discrete Algorithms (SODA)</em></li>
+
+                <li><a href="https://doi.org/10.1214/22-EJP885">Fluctuations of two‑dimensional stochastic heat equation and KPZ equation in subcritical regime for general initial conditions</a> (with <a href="https://www.math.nagoya-u.ac.jp/~nakamako/">Makoto Nakashima</a>), <em>Electronic Journal of Probability</em>, 28: 1–38 (2023)</li>
+
+                <li><a href="https://proceedings.mlr.press/v178/bolthausen22a.html">Gardner formula for Ising perceptron models at small densities</a> (with <a href="https://www.math.uzh.ch/index.php?id=people&id=people&key1=106&L=1">Erwin Bolthausen</a>, <a href="https://math.mit.edu/~nsun/">Nike Sun</a>, Changji Xu), <em>Proceedings of Machine Learning Research</em>, 178: 1787–1911 (2022)</li>
+
+                <li><a href="https://doi.org/10.1214/22-AAP1861">A variational formula for large deviations in first‑passage percolation under tail estimates</a> (with <a href="https://www.ceremade.dauphine.fr/~cosco/">Clément Cosco</a>), <em>Annals of Applied Probability</em>, 33(3): 2103–2135 (2023)</li>
+
+                <li><a href="https://doi.org/10.1016/j.spa.2022.05.010">Law of large numbers and fluctuations in the sub‑critical and $L^2$ regions for SHE and KPZ equation in dimension $d \geq 3$</a> (with <a href="https://www.ceremade.dauphine.fr/~cosco/">Clément Cosco</a>, <a href="https://www.math.nagoya-u.ac.jp/~nakamako/">Makoto Nakashima</a>), <em>Stochastic Processes and their Applications</em>, 151: 127–173 (2022)</li>
+
+                <li><a href="https://doi.org/10.1214/22-EJP746">Maximal edge‑traversal time in First Passage Percolation</a>, <em>Electronic Journal of Probability</em>, 27: 1–32 (2022)</li>
+
+                <li><a href="https://link.springer.com/article/10.1007/s10955-021-02855-6">Triviality of the geometry of mixed p‑spin spherical Hamiltonians with external field</a> (with <a href="https://probability.dmi.unibas.ch/belius/">David Belius</a>, <a href="https://probability.dmi.unibas.ch/cerny/">Jiří Černý</a>, <a href="https://www.uni-frankfurt.de/42358766">Marius Schmidt</a>), <em>Journal of Statistical Physics</em>, 186: 12 (2022)</li>
+
+                <li><a href="https://doi.org/10.1214/20-AIHP1100">Gaussian fluctuations for the directed polymer partition function for $d\geq 3$ and in the whole $L^2$‑region</a> (with <a href="https://www.ceremade.dauphine.fr/~cosco/">Clément Cosco</a>), <em>Annales de l’Institut Henri Poincaré (B) Probabilités et Statistiques</em>, 57(2): 872–889 (2021)</li>
+
+                <li><a href="https://projecteuclid.org/Proceedings/advanced-studies-in-pure-mathematics/Stochastic-Analysis-Random-Fields-and-Integrable-Probability--Fukuoka-2019/Chapter/Divergence-of-non-random-fluctuation-for-Euclidean-first-passage-percolation/10.2969/aspm/08710363">Divergence of non‑random fluctuation for Euclidean first‑passage percolation</a>, in <em>Advanced Studies in Pure Mathematics</em> 87, 2019</li>
+
+                <li><a href="https://doi.org/10.1214/19-ECP267">Divergence of non‑random fluctuation in First Passage Percolation</a>, <em>Electronic Communications in Probability</em>, 24: 65, 1–13 (2019)</li>
+
+                <li><a href="https://doi.org/10.1214/19-AIHP982">Divergence of shape fluctuation for general distributions in first passage percolation</a>, <em>Annales de l’Institut Henri Poincaré (B) Probabilités et Statistiques</em>, 56(2): 782–791 (2020)</li>
+
+                <li><a href="https://doi.org/10.1214/19-EJP334">First passage time of the frog model has a sublinear variance</a> (with <a href="https://sites.google.com/site/vanhaocan/home">Van Hao Can</a>), <em>Electronic Journal of Probability</em>, 24: 1–27 (2019)</li>
+
+                <li><a href="https://link.springer.com/article/10.1007/s10955-018-2179-6">On properties of optimal paths in First‑Passage Percolation</a>, <em>Journal of Statistical Physics</em>, 174: 259–275 (2019)</li>
+
+                <li><a href="https://alea.impa.br/articles/v15/15-01.pdf">Concentration results for directed polymer with unbounded jumps</a>, <em>ALEA</em>, 15: 1–20 (2018)</li>
+
+                <li><a href="https://link.springer.com/article/10.1007/s10955-015-1347-1">Limiting results for the free energy of directed polymers in random environment with unbounded jumps</a> (with <a href="https://www.lpsm.paris/pageperso/comets/">Francis Comets</a>, <a href="http://www.math.tsukuba.ac.jp/~ryoki/">Ryoki Fukushima</a>, <a href="https://www.math.nagoya-u.ac.jp/~noby/">Nobuo Yoshida</a>), <em>Journal of Statistical Physics</em>, 161: 577–597 (2015)</li>
             </ul>
-            
         </section>
     </main>
+
     <footer>
         <p>&copy; 2024 Shuta Nakajima. All rights reserved.</p>
     </footer>
